Fixed table not fully visible when items are added - switched from grid layout to absolute divs - removed justify-content from the feature panelx

--- a/fm.css
+++ b/fm.css
@@ -1,13 +1,11 @@
 .appContainer {
-    display: grid;
-    grid-template-columns: 30% auto;
-    grid-template-rows: 100%;
     width: 100%;
     height: 100%;
 }
 
 .controlPanel {
-    grid-column: 1 / span 1;
+    width: 30%;
+    height: 100%;
     border-right: 1px solid;
 }
 
@@ -16,12 +14,16 @@
 }
 
 .featurePanel {
-    grid-column: 2 / span 1
+    position: absolute;
+    top: 0;
+    left: 30%;
+    width: 70%;
+    height: 100%;
+    overflow: scroll;
 }
 
 .featureTableContainer {
     display: flex;
-    justify-content: center;
     align-items: center;
     height: 100%;
     width: 100%;
